--- a/nav_ecoinvent.ipynb
+++ b/nav_ecoinvent.ipynb
@@ -11,7 +11,8 @@
     "import asyncio\n",
     "import time\n",
     "import httpx\n",
-    "import aiohttp"
+    "import aiohttp\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -184,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.021055700010038s\n"
+      "92.39792804105673s\n"
      ]
     }
    ],
@@ -201,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<coroutine object ClientSession.close at 0x000001943F224E80>"
+       "<coroutine object ClientSession.close at 0x1108ceab0>"
       ]
      },
      "execution_count": 14,
@@ -236,10 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "81d7241e",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -249,7 +250,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
+   "id": "7eb6395c-b7a9-41b2-a95d-14f56f7ca6ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(\"exchanges.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4101491-0f86-4721-a389-d66b2b73cc39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bdf410c-36f3-4a3f-93df-3fc359651c4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4f60fbd7",
    "metadata": {},
    "outputs": [],
@@ -259,235 +286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "id": "bd2a2ca6-3e22-49d7-b944-9d6e35e7d300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_transport.to_excel(\"transp.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "00435c2e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>@context</th>\n",
-       "      <th>@id</th>\n",
-       "      <th>@type</th>\n",
-       "      <th>uuid</th>\n",
-       "      <th>slug</th>\n",
-       "      <th>name</th>\n",
-       "      <th>cas_number</th>\n",
-       "      <th>classifications</th>\n",
-       "      <th>comment</th>\n",
-       "      <th>unit</th>\n",
-       "      <th>properties</th>\n",
-       "      <th>product_information</th>\n",
-       "      <th>formula</th>\n",
-       "      <th>synonym</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>heat-transport-fluid-system-solar-thermal-parabolic-trough-50-mw</th>\n",
-       "      <td>https://glossary.ecoinvent.org/ld-contexts/glo...</td>\n",
-       "      <td>https://glossary.ecoinvent.org/ids/b2c93044-62...</td>\n",
-       "      <td>ei:intermediate-exchange</td>\n",
-       "      <td>b2c93044-6228-4950-833f-230346726d61</td>\n",
-       "      <td>heat-transport-fluid-system-solar-thermal-para...</td>\n",
-       "      <td>heat transport fluid system, solar thermal par...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[{'@context': 'https://glossary.ecoinvent.org/...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'@context': 'https://glossary.ecoinvent.org/l...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>This is an immobile infrastructure, representi...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>transport-freight-aircraft-long-haul</th>\n",
-       "      <td>https://glossary.ecoinvent.org/ld-contexts/glo...</td>\n",
-       "      <td>https://glossary.ecoinvent.org/ids/3317126a-4d...</td>\n",
-       "      <td>ei:intermediate-exchange</td>\n",
-       "      <td>3317126a-4dd7-4047-9ccf-163f94382c94</td>\n",
-       "      <td>transport-freight-aircraft-long-haul</td>\n",
-       "      <td>transport, freight, aircraft, long haul</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[{'@context': 'https://glossary.ecoinvent.org/...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'@context': 'https://glossary.ecoinvent.org/l...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>This is delivering the service of transportati...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>transport-freight-aircraft-medium-haul</th>\n",
-       "      <td>https://glossary.ecoinvent.org/ld-contexts/glo...</td>\n",
-       "      <td>https://glossary.ecoinvent.org/ids/220fe333-53...</td>\n",
-       "      <td>ei:intermediate-exchange</td>\n",
-       "      <td>220fe333-5329-4a8d-b012-1db429f2383b</td>\n",
-       "      <td>transport-freight-aircraft-medium-haul</td>\n",
-       "      <td>transport, freight, aircraft, medium haul</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[{'@context': 'https://glossary.ecoinvent.org/...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'@context': 'https://glossary.ecoinvent.org/l...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>This is delivering the service of transportati...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>transport-freight-aircraft-short-haul</th>\n",
-       "      <td>https://glossary.ecoinvent.org/ld-contexts/glo...</td>\n",
-       "      <td>https://glossary.ecoinvent.org/ids/07ad9bb5-f5...</td>\n",
-       "      <td>ei:intermediate-exchange</td>\n",
-       "      <td>07ad9bb5-f5d3-4e09-ac39-a6dcbb13a0ba</td>\n",
-       "      <td>transport-freight-aircraft-short-haul</td>\n",
-       "      <td>transport, freight, aircraft, short haul</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[{'@context': 'https://glossary.ecoinvent.org/...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'@context': 'https://glossary.ecoinvent.org/l...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>This is delivering the service of transportati...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>transport-freight-aircraft-unspecified</th>\n",
-       "      <td>https://glossary.ecoinvent.org/ld-contexts/glo...</td>\n",
-       "      <td>https://glossary.ecoinvent.org/ids/8795dc98-b6...</td>\n",
-       "      <td>ei:intermediate-exchange</td>\n",
-       "      <td>8795dc98-b6c7-4f09-be36-66739ea84900</td>\n",
-       "      <td>transport-freight-aircraft-unspecified</td>\n",
-       "      <td>transport, freight, aircraft, unspecified</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[{'@context': 'https://glossary.ecoinvent.org/...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{'@context': 'https://glossary.ecoinvent.org/l...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>This is delivering the service of transportati...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                             @context  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  https://glossary.ecoinvent.org/ld-contexts/glo...   \n",
-       "transport-freight-aircraft-long-haul                https://glossary.ecoinvent.org/ld-contexts/glo...   \n",
-       "transport-freight-aircraft-medium-haul              https://glossary.ecoinvent.org/ld-contexts/glo...   \n",
-       "transport-freight-aircraft-short-haul               https://glossary.ecoinvent.org/ld-contexts/glo...   \n",
-       "transport-freight-aircraft-unspecified              https://glossary.ecoinvent.org/ld-contexts/glo...   \n",
-       "\n",
-       "                                                                                                  @id  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  https://glossary.ecoinvent.org/ids/b2c93044-62...   \n",
-       "transport-freight-aircraft-long-haul                https://glossary.ecoinvent.org/ids/3317126a-4d...   \n",
-       "transport-freight-aircraft-medium-haul              https://glossary.ecoinvent.org/ids/220fe333-53...   \n",
-       "transport-freight-aircraft-short-haul               https://glossary.ecoinvent.org/ids/07ad9bb5-f5...   \n",
-       "transport-freight-aircraft-unspecified              https://glossary.ecoinvent.org/ids/8795dc98-b6...   \n",
-       "\n",
-       "                                                                       @type  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  ei:intermediate-exchange   \n",
-       "transport-freight-aircraft-long-haul                ei:intermediate-exchange   \n",
-       "transport-freight-aircraft-medium-haul              ei:intermediate-exchange   \n",
-       "transport-freight-aircraft-short-haul               ei:intermediate-exchange   \n",
-       "transport-freight-aircraft-unspecified              ei:intermediate-exchange   \n",
-       "\n",
-       "                                                                                    uuid  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  b2c93044-6228-4950-833f-230346726d61   \n",
-       "transport-freight-aircraft-long-haul                3317126a-4dd7-4047-9ccf-163f94382c94   \n",
-       "transport-freight-aircraft-medium-haul              220fe333-5329-4a8d-b012-1db429f2383b   \n",
-       "transport-freight-aircraft-short-haul               07ad9bb5-f5d3-4e09-ac39-a6dcbb13a0ba   \n",
-       "transport-freight-aircraft-unspecified              8795dc98-b6c7-4f09-be36-66739ea84900   \n",
-       "\n",
-       "                                                                                                 slug  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  heat-transport-fluid-system-solar-thermal-para...   \n",
-       "transport-freight-aircraft-long-haul                             transport-freight-aircraft-long-haul   \n",
-       "transport-freight-aircraft-medium-haul                         transport-freight-aircraft-medium-haul   \n",
-       "transport-freight-aircraft-short-haul                           transport-freight-aircraft-short-haul   \n",
-       "transport-freight-aircraft-unspecified                         transport-freight-aircraft-unspecified   \n",
-       "\n",
-       "                                                                                                 name  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  heat transport fluid system, solar thermal par...   \n",
-       "transport-freight-aircraft-long-haul                          transport, freight, aircraft, long haul   \n",
-       "transport-freight-aircraft-medium-haul                      transport, freight, aircraft, medium haul   \n",
-       "transport-freight-aircraft-short-haul                        transport, freight, aircraft, short haul   \n",
-       "transport-freight-aircraft-unspecified                      transport, freight, aircraft, unspecified   \n",
-       "\n",
-       "                                                   cas_number  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...       None   \n",
-       "transport-freight-aircraft-long-haul                     None   \n",
-       "transport-freight-aircraft-medium-haul                   None   \n",
-       "transport-freight-aircraft-short-haul                    None   \n",
-       "transport-freight-aircraft-unspecified                   None   \n",
-       "\n",
-       "                                                                                      classifications  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  [{'@context': 'https://glossary.ecoinvent.org/...   \n",
-       "transport-freight-aircraft-long-haul                [{'@context': 'https://glossary.ecoinvent.org/...   \n",
-       "transport-freight-aircraft-medium-haul              [{'@context': 'https://glossary.ecoinvent.org/...   \n",
-       "transport-freight-aircraft-short-haul               [{'@context': 'https://glossary.ecoinvent.org/...   \n",
-       "transport-freight-aircraft-unspecified              [{'@context': 'https://glossary.ecoinvent.org/...   \n",
-       "\n",
-       "                                                   comment  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...    None   \n",
-       "transport-freight-aircraft-long-haul                  None   \n",
-       "transport-freight-aircraft-medium-haul                None   \n",
-       "transport-freight-aircraft-short-haul                 None   \n",
-       "transport-freight-aircraft-unspecified                None   \n",
-       "\n",
-       "                                                                                                 unit  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  {'@context': 'https://glossary.ecoinvent.org/l...   \n",
-       "transport-freight-aircraft-long-haul                {'@context': 'https://glossary.ecoinvent.org/l...   \n",
-       "transport-freight-aircraft-medium-haul              {'@context': 'https://glossary.ecoinvent.org/l...   \n",
-       "transport-freight-aircraft-short-haul               {'@context': 'https://glossary.ecoinvent.org/l...   \n",
-       "transport-freight-aircraft-unspecified              {'@context': 'https://glossary.ecoinvent.org/l...   \n",
-       "\n",
-       "                                                   properties  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...         []   \n",
-       "transport-freight-aircraft-long-haul                       []   \n",
-       "transport-freight-aircraft-medium-haul                     []   \n",
-       "transport-freight-aircraft-short-haul                      []   \n",
-       "transport-freight-aircraft-unspecified                     []   \n",
-       "\n",
-       "                                                                                  product_information  \\\n",
-       "heat-transport-fluid-system-solar-thermal-parab...  This is an immobile infrastructure, representi...   \n",
-       "transport-freight-aircraft-long-haul                This is delivering the service of transportati...   \n",
-       "transport-freight-aircraft-medium-haul              This is delivering the service of transportati...   \n",
-       "transport-freight-aircraft-short-haul               This is delivering the service of transportati...   \n",
-       "transport-freight-aircraft-unspecified              This is delivering the service of transportati...   \n",
-       "\n",
-       "                                                   formula synonym  \n",
-       "heat-transport-fluid-system-solar-thermal-parab...    None      []  \n",
-       "transport-freight-aircraft-long-haul                  None      []  \n",
-       "transport-freight-aircraft-medium-haul                None      []  \n",
-       "transport-freight-aircraft-short-haul                 None      []  \n",
-       "transport-freight-aircraft-unspecified                None      []  "
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ecoinvent_names = df_transport[\"name\"].tolist()\n",
     "df_transport.head()"
@@ -503,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "3cce0f6b",
    "metadata": {},
    "outputs": [],
@@ -543,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "7a3975f0",
    "metadata": {},
    "outputs": [],
@@ -568,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
